# reftruth

./: .bazelrc  MODULE.bazel  maven_install.json
src/main/java/im/meumertzhe/reftruth/: BUILD.bazel  ReferenceSubject.java  Universe.java  package-info.java
src/test/java/im/meumertzhe/reftruth/: BUILD.bazel  ReferenceSubjectTest.java
