load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")

java_test_suite(
    name = "reftruth_test",
    srcs = glob(["*.java"]),
    package = "im.meumertzhe.reftruth",
    runner = "junit5",
    runtime_deps = JUNIT5_DEPS,
    deps = [
        "//src/main/java/im/meumertzhe/reftruth",
        "@maven//:com_google_truth_truth",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)
